# Delivery_MiniApp

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
src/: config.py  main.py
src/bot/: bot.py  keyboards.py  models.py  router.py  utils.py
src/database/: dao.py  dao_class.py  database.py  models.py  utils.py
src/delivery/: dependencies.py  router.py  schemas.py
templates/page/: index.html  order_history.html
templates/static/: script.js  script_order.js  style.css  style_order.css
templates/static/Organization/: name.json
