[project]
name = "delivery-miniapp"
version = "0.1.0"
description = "Aiogram + WebApp + FastApi + SqlAlchemy. Приложение по заказу продуктов, с историей заказов каждого пользователя + отправка заявки в отдельный чат администраторам. Админ часть: просмотр всех заказов на выбранную дату"
authors = [
    {name = "https://t.me/safarik47"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "aiogram (>=3.20.0.post0,<4.0.0)",
    "pydantic-settings (>=2.10.0,<3.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "async-sqlalchemy (>=1.0.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
